2022-05-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_PROG_YACC): Update wording of error
	message: we search for "yacc", so report it as missing if it is
	not found (along with "byacc" and "bison").

2022-05-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* configure.ac: Fix shell style nits.  Get rid of string
	{non-}nullity tests and comparisons involving concatenation with
	garbage (usually "x").  See 13 November entry regarding m4.  Use
	idiomatic shell "brace style" for control structures.

2022-05-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	Trivially refactor libgroff allocator configuration.

	* m4/groff.m4 (GROFF_USE_GROFF_ALLOCATOR): Update description of
	configuration flag to clarify that it's implemented in a
	library.  Rename shell variable to prefix it with "groff_",
	putting it in an ad hoc name space as with other variables.  If
	feature disabled, set variable to literal "no".
	* configure.ac: Use renamed variable and interpolate it directly
	into configuration report, simplifying shell logic.

2022-05-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* configure.ac: Revise configuration report for intelligibility.
	Add report of C++ compiler and flags used: we compile much more
	C++ than C code so this seems appropriate.  Report Perl
	interpreter version so that we can collect build reports and
	turn the ratchet past Perl 5.6.1 at some point.  Fix X11
	"resources" misnomer (application defaults are what is meant).
	Rephrase generally.

2022-05-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* Makefile.am (EXTRA_DIST): Ship "ChangeLog.122" in distribution
	archive.  Overlooked in commit c11995df16, 19 Feburary 2021.

2022-05-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grotty/tests/basic_latin_glyphs_map_correctly.sh:
	Fix portability problem: POSIX says that "od -c" (and "od -t c")
	are supposed to emit printing characters as defined by the