@@ -65,6 +65,7 @@ GROFF_PRINT
 GROFF_REFERDIR_DEFAULT
 AC_PROG_EGREP
 GROFF_PROG_YACC
+GROFF_PROG_M4
 GROFF_MAKEINFO
 GROFF_TEXI2DVI
 AC_PROG_RANLIB
