@@ -231,11 +231,11 @@ $(M4CHECK): tmac/groff_man.7.man.in
 	  $(tmac_srcdir)/groff_man.7.man.in > $@
 
 tmac/groff_man.7.man: tmac/groff_man.7.man.in $(M4CHECK)
-	$(AM_V_GEN)m4 -D_groff_man_not_style \
+	$(AM_V_GEN)$(M4) -D_groff_man_not_style \
 	  $(tmac_srcdir)/groff_man.7.man.in > $@
 
 tmac/groff_man_style.7.man: tmac/groff_man.7.man.in $(M4CHECK)
-	$(AM_V_GEN)m4 -D_groff_man_style \
+	$(AM_V_GEN)$(M4) -D_groff_man_style \
 	  $(tmac_srcdir)/groff_man.7.man.in > $@
 
 # The installation of groff compatibility wrappers for vendor-provided
